--- a/src/School/UserBundle/Resources/config/routing.yml
+++ b/src/School/UserBundle/Resources/config/routing.yml
@@ -18,6 +18,10 @@ admin_assign_students:
     pattern: /admin/assign_students/
     defaults: { _controller: SchoolUserBundle:Admin:assignStudents }
 
-admin_test_assigned_students:
+admin_selected_students:
+    pattern: /admin/assign_students/selectedAction/
+    defaults: { _controller: SchoolUserBundle:Admin:studentSelect }
+    
+admin_assign_students_test:
     pattern: /admin/assign_students/test/
-    defaults: { _controller: SchoolUserBundle:Admin:testAssignedStudents }
+    defaults: { _controller: SchoolUserBundle:Admin:test }
