--- a/src/School/UserBundle/Resources/config/doctrine/SchoolClass.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/SchoolClass.orm.yml
@@ -22,6 +22,7 @@ School\UserBundle\Entity\SchoolClass:
         students:
             targetEntity: Student
             mappedBy: schoolClass
+            cascade: [persist]
         courseClasses:
             targetEntity: CourseClass
             mappedBy: class
