--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,3 +73,7 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+    
+knp_menu:
+    twig:
+        template: SchoolUserBundle:Menu:knp_menu.html.twig
