--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "ircmaxell/password-compat": "1.0.3",
         "twitter/bootstrap": "3.1.1",
-        "leafo/lessphp": "0.4.0"
+        "leafo/lessphp": "0.4.0",
+        "knplabs/knp-menu-bundle": "2.0"
     },
     "scripts": {
         "post-install-cmd": [
