--- a/src/School/UserBundle/Resources/config/doctrine/CourseClass.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/CourseClass.orm.yml
@@ -30,4 +30,9 @@ School\UserBundle\Entity\CourseClass:
             joinColumn: 
                 name: class_id
                 referencedColumnName: id
+    oneToMany:
+        lectures:
+            targetEntity: Lecture
+            cascade: [persist]
+            mappedBy: courseClass
     lifecycleCallbacks: {  }
