--- a/src/School/UserBundle/Resources/config/validation.yml
+++ b/src/School/UserBundle/Resources/config/validation.yml
@@ -9,4 +9,13 @@ School\UserBundle\Entity\User:
                 min: 3 
                 #minMessage: Password must be at least 3 chars
                 
+School\UserBundle\Entity\Lecture:
+    properties:
+        file:
+            - File: 
+                maxSize: 2M
+                mimeTypes: [application/pdf, application/x-pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document, application/vnd.openxmlformats-officedocument.wordprocessingml.template, application/vnd.ms-powerpoint, application/vnd.openxmlformats-officedocument.presentationml.presentation, text/plain, application/vnd.ms-excel.addin.macroEnabled.12, application/vnd.ms-excel, application/vnd.ms-excel.sheet.binary.macroEnabled.12, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.openxmlformats-officedocument.spreadsheetml.template ]
+                mimeTypesMessage: This file is invalid. Allowed extensions: pdf, doc, docx, dotx, ppt, pptx, xls, xlsb, xlsx, xltx, txt
+                
+                
             
