Fixed exam creation and edit

--- a/src/School/UserBundle/Resources/config/doctrine/Course.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/Course.orm.yml
@@ -23,4 +23,8 @@ School\UserBundle\Entity\Course:
         courseClasses:
             targetEntity: CourseClass
             mappedBy: course
+        exams:
+            targetEntity: Exam
+            cascade: [persist]
+            mappedBy: course
     lifecycleCallbacks: {  }
