Teacher administrative environment: exam assignment to a course / class

--- a/src/School/UserBundle/Resources/config/doctrine/Course.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/Course.orm.yml
@@ -27,4 +27,8 @@ School\UserBundle\Entity\Course:
             targetEntity: Exam
             cascade: [persist]
             mappedBy: course
+        lectures:
+            targetEntity: Lecture
+            cascade: [persist]
+            mappedBy: course
     lifecycleCallbacks: {  }
