Taken exam by student. Score the exam

--- a/src/School/UserBundle/Resources/config/doctrine/AssignedExam.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/AssignedExam.orm.yml
@@ -1,5 +1,6 @@
 School\UserBundle\Entity\AssignedExam:
     type: entity
+    repositoryClass: School\UserBundle\Entity\AssignedExamRepository
     table: assigned_exam
     id:
         id:
