--- a/src/School/UserBundle/Resources/config/routing.yml
+++ b/src/School/UserBundle/Resources/config/routing.yml
@@ -47,7 +47,7 @@ teacher_edit_assigned_exam:
     defaults: { _controller: SchoolUserBundle:Teacher:editAssignedExam }
     
 teacher_add_exam:
-    pattern: /teacher/add_exam/{course_id}
+    pattern: /teacher/add_exam/{course_id}/{class_id}
     defaults: { _controller: SchoolUserBundle:Teacher:addExam }
     
 teacher_edit_exam:
@@ -75,5 +75,5 @@ student_list_courses:
     defaults: { _controller: SchoolUserBundle:Student:listCourses }
     
 student_exam:
-    pattern: /student/exam/{exam_id}
+    pattern: /student/exam/{assignedExam_id}
     defaults: { _controller: SchoolUserBundle:Student:exam }
