--- a/src/School/UserBundle/Resources/config/doctrine/AssignedExam.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/AssignedExam.orm.yml
@@ -15,6 +15,8 @@ School\UserBundle\Entity\AssignedExam:
             type: datetime
         stop:
             type: datetime
+        duration:
+            type: string
     uniqueConstraints:
         search_idx:
             columns: [exam_id, schoolClass_id]
