--- a/src/School/UserBundle/Resources/config/doctrine/TakenQuestion.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/TakenQuestion.orm.yml
@@ -10,6 +10,7 @@ School\UserBundle\Entity\TakenQuestion:
     fields:
         answer:
             type: integer
+            nullable: true
     manyToOne:
         takenExam:
             targetEntity: TakenExam
