--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,11 +69,26 @@ doctrine:
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
+    # ecryption: "%mailer_encryption%"
+    auth_mode: "%mailer_auth_mode%"
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+    delivery_address: "%mailer_delivery_address%" # used for development reasons
     
 knp_menu:
     twig:
         template: SchoolUserBundle:Menu:knp_menu.html.twig
+ 
+#Paginator configuration 
+knp_paginator:
+    page_range: 5                      # default page range used in pagination control
+    default_options:
+        page_name: page                # page query parameter name
+        sort_field_name: sort          # sort field query parameter name
+        sort_direction_name: direction # sort direction query parameter name
+        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
+    template:
+        pagination: KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig     # sliding pagination controls template
+        sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig                         # sort link template
