--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,8 +4,6 @@ security:
             algorithm: bcrypt
             
     role_hierarchy:
-        # ROLE_TEACHER: ROLE_STUDENT
-        # ROLE_ADMIN: [ROLE_TEACHER, ROLE_ALLOWED_TO_SWITCH ]
         
     providers:
         main:
@@ -21,12 +19,10 @@ security:
             form_login: 
                 login_path: login 
                 check_path: login_check
-                default_target_path: login_success
+                default_target_path: homepage
             logout:
                 path: /logout
                 target: /
             
     access_control:
         # - { path: ^/admin/, roles: ROLE_ADMIN }
-        # - { path: ^/teacher/, roles: ROLE_TEACHER }
-        # - { path: ^/student/, roles: ROLE_STUDENT }
