add school classes from UI

--- a/src/School/UserBundle/Resources/config/doctrine/SchoolYear.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/SchoolYear.orm.yml
@@ -19,8 +19,8 @@ School\UserBundle\Entity\SchoolYear:
     oneToMany:
         schoolClasses:
             targetEntity: SchoolClass
+            cascade: [persist]
             mappedBy: schoolYear
-    # oneToMany:
         courses:
             targetEntity: Course
             mappedBy: schoolYear
