--- a/src/School/UserBundle/Resources/config/services.yml
+++ b/src/School/UserBundle/Resources/config/services.yml
@@ -15,3 +15,7 @@ services:
         arguments: ["@security.context"]
         tags:
             - { name: form.type, alias: user_type }
+
+    alerts:
+        class: School\UserBundle\Service\Alerts
+        arguments: ['@doctrine.orm.entity_manager']
