--- a/src/School/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -43,4 +43,8 @@ School\UserBundle\Entity\User:
         student:
             targetEntity: Student
             mappedBy: user
+    oneToMany:
+        messages:
+            targetEntity: Message
+            mappedBy: user
         
