--- a/src/School/UserBundle/Resources/config/doctrine/Teacher.orm.yml
+++ b/src/School/UserBundle/Resources/config/doctrine/Teacher.orm.yml
@@ -1,7 +1,7 @@
 School\UserBundle\Entity\Teacher:
     type: entity
     repositoryClass: School\UserBundle\Entity\TeacherRepository
-    table: null
+    table: teacher
     id:
         id:
             type: integer
